objects/Building_Market__c.object
<CustomObject>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Building UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Building Markets</relationshipLabel>
        <relationshipName>Building_Markets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Market UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Building Markets</relationshipLabel>
        <relationshipName>Building_Markets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>This is a Junction object. One Building can be associated with multiple Markets and vice versa.</description>
    <label>Building Market</label>
    <nameField>
        <label>Building Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Markets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>